@@ -31,7 +31,7 @@
       },
       "develop" : {
          "requires" : {
-            "Minion" : "8.02",
+            "Minion" : "8.04",
             "Pod::Coverage::TrustPod" : "0",
             "Test::Pod" : "1.41",
             "Test::Pod::Coverage" : "1.08"
@@ -65,7 +65,7 @@
    "provides" : {
       "Minion::Backend::SQLite" : {
          "file" : "lib/Minion/Backend/SQLite.pm",
-         "version" : "3.001"
+         "version" : "3.002"
       }
    },
    "release_status" : "stable",
@@ -81,7 +81,7 @@
       },
       "x_IRC" : "irc://irc.perl.org/#mojo"
    },
-   "version" : "3.001",
+   "version" : "3.002",
    "x_Dist_Zilla" : {
       "perl" : {
          "version" : "5.026001"
@@ -156,7 +156,7 @@
                }
             },
             "name" : "@Author::DBOOK/Git::Contributors",
-            "version" : "0.030"
+            "version" : "0.031"
          },
          {
             "class" : "Dist::Zilla::Plugin::MetaNoIndex",
@@ -275,7 +275,7 @@
                   "branch" : null,
                   "changelog" : "Changes",
                   "signed" : 0,
-                  "tag" : "v3.001",
+                  "tag" : "v3.002",
                   "tag_format" : "v%v",
                   "tag_message" : "v%v"
                },
