@@ -1,4 +1,6 @@
 {{$NEXT}}
+  - Add list_locks method.
+  - Add active_locks field to stats.
 
 3.001     2017-11-28 21:57:15 EST
   - Fix condition in dequeue that could lead to calling usleep with a negative
